Header & footer ready

--- a/Project/index.html
+++ b/Project/index.html
@@ -4,10 +4,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Moxa</title>
+	<title>Moxa - Home</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="icon" type="image/svg+xml" href="img/vect/star-red40&240.svg">
+
 </head>
 
 <body>
@@ -21,6 +23,8 @@
 					</a>
 				</div>
 				<div class="header__navigate-icon">
+					<div class="navigate-icon__line"></div>
+					<div class="navigate-icon__line"></div>
 					<div class="navigate-icon__line"></div>
 				</div>
 				<nav class="header__navigate">
@@ -52,9 +56,9 @@
 							<div class="welcome__subtitle-item text">Webflow</div>
 						</div>
 						<div class="welcome__link">
-							<div class="welcole__link-label">Got a project?</div>
+							<div class="welcome__link-label">Got a project?</div>
 							<a href="#">
-								<div class="welcole__link-btn">Let's talk.</div>
+								<div class="welcome__link-label btn">Let's talk.</div>
 							</a>
 						</div>
 					</div>
@@ -65,12 +69,12 @@
 			</div>
 			<div class="line">
 				<div class="line__content">
-					<div class="line__item">Development</div>
-					<div class="line__item">Strategy</div>
-					<div class="line__item">Product Design</div>
-					<div class="line__item">Motion Graphic</div>
-					<div class="line__item">Art Direction</div>
-					<div class="line__item">Design</div>
+					<div class="line__item">Development<img src="img/vect/star-little32.svg" alt="star"></div>
+					<div class="line__item">Strategy<img src="img/vect/star-little32.svg" alt="star"></div>
+					<div class="line__item">Product Design<img src="img/vect/star-little32.svg" alt="star"></div>
+					<div class="line__item">Motion Graphic<img src="img/vect/star-little32.svg" alt="star"></div>
+					<div class="line__item">Art Direction<img src="img/vect/star-little32.svg" alt="star"></div>
+					<div class="line__item">Design<img src="img/vect/star-little32.svg" alt="star"></div>
 					<div class="line__item">Branding</div>
 				</div>
 			</div>
@@ -122,6 +126,7 @@
 					</div>
 				</div>
 			</div>
+			<!-- Awards -->
 			<div class="block">
 				<div class="container">
 					<div class="block__star"><img src="img/vect/star-red40&240.svg" alt="star"></div>
@@ -143,38 +148,218 @@
 								</div>
 							</div>
 						</div>
+						<div class="awards__item">
+							<div class="awards__item-block">
+								<div class="awards__item-number">2</div>
+								<div class="awards__item-heading">
+									<div class="awards__item-title">Webflow Awwwards Team</div>
+									<div class="awards__item-subtitle">Runner Up - Webflow Expert Design</div>
+								</div>
+							</div>
+							<div class="awards__item-block">
+								<div class="awards__item-info">
+									<div class="awards__item-span">DEVELOPMENT</div>
+									<div class="awards__item-date">2021</div>
+								</div>
+							</div>
+						</div>
+						<div class="awards__item">
+							<div class="awards__item-block">
+								<div class="awards__item-number">3</div>
+								<div class="awards__item-heading">
+									<div class="awards__item-title">Webflow Awwwards Team</div>
+									<div class="awards__item-subtitle">Runner Up - Webflow Expert Design</div>
+								</div>
+							</div>
+							<div class="awards__item-block">
+								<div class="awards__item-info">
+									<div class="awards__item-span">BRANDING</div>
+									<div class="awards__item-date">2018</div>
+								</div>
+							</div>
+						</div>
+						<div class="awards__item">
+							<div class="awards__item-block">
+								<div class="awards__item-number">4</div>
+								<div class="awards__item-heading">
+									<div class="awards__item-title">Webflow Awwwards Team</div>
+									<div class="awards__item-subtitle">Runner Up - Webflow Expert Design</div>
+								</div>
+							</div>
+							<div class="awards__item-block">
+								<div class="awards__item-info">
+									<div class="awards__item-span">PRODUCT DESIGN</div>
+									<div class="awards__item-date">2014</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
+			<!-- Portfolio -->
 			<div class="block">
 				<div class="container">
 					<div class="block__star"><img src="img/vect/star-red40&240.svg" alt="star"></div>
 					<div class="block__title">Portfolio</div>
-					<div class="block__subtitle"></div>
-					<div class="block__body"></div>
+					<div class="block__subtitle">REGONITIONS & ACCOIMPLISHMENTS</div>
+					<div class="block__body portfolio">
+						<div class="potfolio__row img-left">
+							<div class="potfolio__col">
+								<img src="img/rast/portfolio/1.png" alt="1">
+							</div>
+							<div class="potfolio__col">
+								<div class="portfolio__class">Art Direction</div>
+								<div class="portfolio__title">Beautiful and advanced website interfaces</div>
+								<div class="portfolio__more">Read More</div>
+							</div>
+						</div>
+						<div class="potfolio__row img-right">
+							<div class="potfolio__col">
+								<img src="img/rast/portfolio/2.png" alt="2">
+							</div>
+							<div class="potfolio__col">
+								<div class="portfolio__class">Branding</div>
+								<div class="portfolio__title">Design and extreme programming practice</div>
+								<div class="portfolio__more">Read More</div>
+							</div>
+						</div>
+						<div class="potfolio__row img-left">
+							<div class="potfolio__col">
+								<img src="img/rast/portfolio/3.png" alt="3">
+							</div>
+							<div class="potfolio__col">
+								<div class="portfolio__class">Web Design</div>
+								<div class="portfolio__title">Nature inspired design</div>
+								<div class="portfolio__more">Read More</div>
+							</div>
+						</div>
+						<div class="potfolio__row img-right">
+							<div class="potfolio__col">
+								<img src="img/rast/portfolio/4.png" alt="4">
+							</div>
+							<div class="potfolio__col">
+								<div class="portfolio__class">Motion Graphics</div>
+								<div class="portfolio__title">Design & concept at work.</div>
+								<div class="portfolio__more">Read More</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
+			<!-- Services -->
 			<div class="block">
 				<div class="container">
 					<div class="block__star"><img src="img/vect/star-red40&240.svg" alt="star"></div>
 					<div class="block__title">Services</div>
-					<div class="block__subtitle"></div>
-					<div class="block__body"></div>
+					<div class="block__subtitle">REGONITIONS & ACCOIMPLISHMENTS</div>
+					<div class="block__body services">
+						<div class="serveces__item">
+							<div class="services__title">Web Design</div>
+							<div class="services__body">Every single project is a challenge that we accept eagerly. Let’s
+								implement innovative ideas together!</div>
+						</div>
+						<div class="serveces__item">
+							<div class="services__title">Product Design</div>
+							<div class="services__body">Every single project is a challenge that we accept eagerly. Let’s
+								implement innovative ideas together!</div>
+						</div>
+						<div class="serveces__item">
+							<div class="services__title">UI/UX Design</div>
+							<div class="services__body">Every single project is a challenge that we accept eagerly. Let’s
+								implement innovative ideas together!</div>
+						</div>
+						<div class="serveces__item">
+							<div class="services__title">Art Direction</div>
+							<div class="services__body">Every single project is a challenge that we accept eagerly. Let’s
+								implement innovative ideas together!</div>
+						</div>
+					</div>
 				</div>
 			</div>
+			<!-- Happy Customers -->
 			<div class="block">
 				<div class="container">
 					<div class="block__star"><img src="img/vect/star-red40&240.svg" alt="star"></div>
 					<div class="block__title">Happy Customer</div>
-					<div class="block__body"></div>
+					<div class="block__body customers">
+						<div class="customers__item"><img src="img/rast/customers/tribal.png" alt="tribal"></div>
+						<div class="customers__item"><img src="img/rast/customers/republica.png" alt="rpublica"></div>
+						<div class="customers__item"><img src="img/rast/customers/veroxfloor.png" alt="veroxfloor"></div>
+						<div class="customers__item"><img src="img/rast/customers/invoice2go.png" alt="invoice2go"></div>
+
+						<div class="customers__item"><img src="img/rast/customers/veroxfloor.png" alt="veroxfloor"></div>
+						<div class="customers__item"><img src="img/rast/customers/tribal.png" alt="tribal"></div>
+						<div class="customers__item"><img src="img/rast/customers/invoice2go.png" alt="invoice2go"></div>
+						<div class="customers__item"><img src="img/rast/customers/republica.png" alt="rpublica"></div>
+					</div>
 				</div>
 			</div>
+			<!-- Artiles -->
 			<div class="block">
 				<div class="container">
 					<div class="block__star"><img src="img/vect/star-red40&240.svg" alt="star"></div>
 					<div class="block__title">Articles</div>
 					<div class="block__subtitle">REGONITIONS & ACCOIMPLISHMENTS</div>
-					<div class="block__body"></div>
+					<div class="block__body articles">
+						<div class="articles__row">
+							<div class="articles__col">
+								<div class="articles__design-date">
+									<div class="articles__item">DESIGN</div>
+									<div class="articles__item">/</div>
+									<div class="articles__item">April 28, 2022</div>
+								</div>
+								<div class="articles__title">Why I moved from Wordpress to Webflow</div>
+							</div>
+							<div class="articles__col">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+								labore et dolore.
+							</div>
+						</div>
+						<div class="articles__row">
+							<div class="articles__col">
+								<div class="articles__design-date">
+									<div class="articles__item">DESIGN</div>
+									<div class="articles__item">/</div>
+									<div class="articles__item">April 26, 2022</div>
+								</div>
+								<div class="articles__title">What did i learn from doing 50+ design sprints</div>
+							</div>
+							<div class="articles__col">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+								labore et dolore.
+							</div>
+						</div>
+						<div class="articles__row">
+							<div class="articles__col">
+								<div class="articles__design-date">
+									<div class="articles__item">BUSINESS & OFFICE</div>
+									<div class="articles__item">/</div>
+									<div class="articles__item">April 26, 2022</div>
+								</div>
+								<div class="articles__title">Fostering professional growth in your company</div>
+							</div>
+							<div class="articles__col">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+								labore et dolore.
+							</div>
+						</div>
+						<a href="#">
+							<div class="articles__button">
+								Browse Articles
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="articles__star"><img src="img/vect/star-red40&240.svg" alt="star"></div>
+			</div>
+			<!-- Subscribe -->
+			<div class="block subscribe">
+				<div class="container">
+					<div class="block__row">Subscriber to our newsletter</div>
+					<form class="block__row">
+						<input type="text" name="email" id="email" placeholder="Email Address">
+						<button class="subscribe">Subscribe</button>
+					</form>
 				</div>
 			</div>
 		</main>
@@ -192,13 +377,14 @@
 						</div>
 					</div>
 				</div>
-				<div class="footer__row">
+				<div class="footer__row sec">
 					<div class="footer__col">© Made by Portfolio Template & powered by Flowbase</div>
 					<div class="footer__col">
 						<div class="footer__social">
-							<div class="footer__social-item"><img src="img/vect/social/instagram.svg" alt="instagram"></div>
-							<div class="footer__social-item"><img src="img/vect/social/twitter.svg" alt="twitter"></div>
-							<div class="footer__social-item"><img src="img/vect/social/linkedin.svg" alt="linkedin"></div>
+							<div class="footer__social-item inst"><img src="img/vect/social/instagram.svg" alt="instagram">
+							</div>
+							<div class="footer__social-item twit"><img src="img/vect/social/twitter.svg" alt="twitter"></div>
+							<div class="footer__social-item link"><img src="img/vect/social/linkedin.svg" alt="linkedin"></div>
 						</div>
 					</div>
 				</div>
