--- a/Project/index.html
+++ b/Project/index.html
@@ -141,11 +141,9 @@
 									<div class="awards__item-subtitle">Runner Up - Webflow Expert Design</div>
 								</div>
 							</div>
-							<div class="awards__item-block">
-								<div class="awards__item-info">
-									<div class="awards__item-span">PRODUCT DESIGN</div>
-									<div class="awards__item-date">2022</div>
-								</div>
+							<div class="awards__item-block date">
+								<div class="awards__item-span">PRODUCT DESIGN</div>
+								<div class="awards__item-date">2022</div>
 							</div>
 						</div>
 						<div class="awards__item">
@@ -156,11 +154,9 @@
 									<div class="awards__item-subtitle">Runner Up - Webflow Expert Design</div>
 								</div>
 							</div>
-							<div class="awards__item-block">
-								<div class="awards__item-info">
-									<div class="awards__item-span">DEVELOPMENT</div>
-									<div class="awards__item-date">2021</div>
-								</div>
+							<div class="awards__item-block date">
+								<div class="awards__item-span">DEVELOPMENT</div>
+								<div class="awards__item-date">2021</div>
 							</div>
 						</div>
 						<div class="awards__item">
@@ -171,11 +167,9 @@
 									<div class="awards__item-subtitle">Runner Up - Webflow Expert Design</div>
 								</div>
 							</div>
-							<div class="awards__item-block">
-								<div class="awards__item-info">
-									<div class="awards__item-span">BRANDING</div>
-									<div class="awards__item-date">2018</div>
-								</div>
+							<div class="awards__item-block date">
+								<div class="awards__item-span">BRANDING</div>
+								<div class="awards__item-date">2018</div>
 							</div>
 						</div>
 						<div class="awards__item">
@@ -186,11 +180,9 @@
 									<div class="awards__item-subtitle">Runner Up - Webflow Expert Design</div>
 								</div>
 							</div>
-							<div class="awards__item-block">
-								<div class="awards__item-info">
-									<div class="awards__item-span">PRODUCT DESIGN</div>
-									<div class="awards__item-date">2014</div>
-								</div>
+							<div class="awards__item-block date">
+								<div class="awards__item-span">PRODUCT DESIGN</div>
+								<div class="awards__item-date">2014</div>
 							</div>
 						</div>
 					</div>
@@ -203,41 +195,41 @@
 					<div class="block__title">Portfolio</div>
 					<div class="block__subtitle">REGONITIONS & ACCOIMPLISHMENTS</div>
 					<div class="block__body portfolio">
-						<div class="potfolio__row img-left">
-							<div class="potfolio__col">
+						<div class="portfolio__row img-left">
+							<div class="portfolio__col img">
 								<img src="img/rast/portfolio/1.png" alt="1">
 							</div>
-							<div class="potfolio__col">
+							<div class="portfolio__col">
 								<div class="portfolio__class">Art Direction</div>
 								<div class="portfolio__title">Beautiful and advanced website interfaces</div>
 								<div class="portfolio__more">Read More</div>
 							</div>
 						</div>
-						<div class="potfolio__row img-right">
-							<div class="potfolio__col">
+						<div class="portfolio__row img-right">
+							<div class="portfolio__col img">
 								<img src="img/rast/portfolio/2.png" alt="2">
 							</div>
-							<div class="potfolio__col">
+							<div class="portfolio__col">
 								<div class="portfolio__class">Branding</div>
 								<div class="portfolio__title">Design and extreme programming practice</div>
 								<div class="portfolio__more">Read More</div>
 							</div>
 						</div>
-						<div class="potfolio__row img-left">
-							<div class="potfolio__col">
+						<div class="portfolio__row img-left">
+							<div class="portfolio__col img">
 								<img src="img/rast/portfolio/3.png" alt="3">
 							</div>
-							<div class="potfolio__col">
+							<div class="portfolio__col">
 								<div class="portfolio__class">Web Design</div>
 								<div class="portfolio__title">Nature inspired design</div>
 								<div class="portfolio__more">Read More</div>
 							</div>
 						</div>
-						<div class="potfolio__row img-right">
-							<div class="potfolio__col">
+						<div class="portfolio__row img-right">
+							<div class="portfolio__col img">
 								<img src="img/rast/portfolio/4.png" alt="4">
 							</div>
-							<div class="potfolio__col">
+							<div class="portfolio__col">
 								<div class="portfolio__class">Motion Graphics</div>
 								<div class="portfolio__title">Design & concept at work.</div>
 								<div class="portfolio__more">Read More</div>
@@ -253,22 +245,22 @@
 					<div class="block__title">Services</div>
 					<div class="block__subtitle">REGONITIONS & ACCOIMPLISHMENTS</div>
 					<div class="block__body services">
-						<div class="serveces__item">
+						<div class="services__item">
 							<div class="services__title">Web Design</div>
 							<div class="services__body">Every single project is a challenge that we accept eagerly. Let’s
 								implement innovative ideas together!</div>
 						</div>
-						<div class="serveces__item">
+						<div class="services__item">
 							<div class="services__title">Product Design</div>
 							<div class="services__body">Every single project is a challenge that we accept eagerly. Let’s
 								implement innovative ideas together!</div>
 						</div>
-						<div class="serveces__item">
+						<div class="services__item">
 							<div class="services__title">UI/UX Design</div>
 							<div class="services__body">Every single project is a challenge that we accept eagerly. Let’s
 								implement innovative ideas together!</div>
 						</div>
-						<div class="serveces__item">
+						<div class="services__item">
 							<div class="services__title">Art Direction</div>
 							<div class="services__body">Every single project is a challenge that we accept eagerly. Let’s
 								implement innovative ideas together!</div>
@@ -295,14 +287,14 @@
 				</div>
 			</div>
 			<!-- Artiles -->
-			<div class="block">
+			<div class="block articles">
 				<div class="container">
 					<div class="block__star"><img src="img/vect/star-red40&240.svg" alt="star"></div>
 					<div class="block__title">Articles</div>
 					<div class="block__subtitle">REGONITIONS & ACCOIMPLISHMENTS</div>
 					<div class="block__body articles">
 						<div class="articles__row">
-							<div class="articles__col">
+							<div class="articles__col left">
 								<div class="articles__design-date">
 									<div class="articles__item">DESIGN</div>
 									<div class="articles__item">/</div>
@@ -343,22 +335,21 @@
 								labore et dolore.
 							</div>
 						</div>
-						<a href="#">
-							<div class="articles__button">
-								Browse Articles
-							</div>
-						</a>
+						<button class="articles__button">
+							Browse Articles
+						</button>
 					</div>
 				</div>
 				<div class="articles__star"><img src="img/vect/star-red40&240.svg" alt="star"></div>
 			</div>
+
 			<!-- Subscribe -->
 			<div class="block subscribe">
 				<div class="container">
-					<div class="block__row">Subscriber to our newsletter</div>
-					<form class="block__row">
+					<div class="subscribe__col">Subscriber to our newsletter</div>
+					<form class="subscribe__col">
 						<input type="text" name="email" id="email" placeholder="Email Address">
-						<button class="subscribe">Subscribe</button>
+						<button class="subscribe__btn">Subscribe</button>
 					</form>
 				</div>
 			</div>
