--- a/Project/index.html
+++ b/Project/index.html
@@ -287,7 +287,7 @@
 				</div>
 			</div>
 			<!-- Artiles -->
-			<div class="block articles">
+			<div class="block">
 				<div class="container">
 					<div class="block__star"><img src="img/vect/star-red40&240.svg" alt="star"></div>
 					<div class="block__title">Articles</div>
