Ready without scroll events

--- a/Project/index.html
+++ b/Project/index.html
@@ -346,8 +346,8 @@
 			<!-- Subscribe -->
 			<div class="block subscribe">
 				<div class="container">
-					<div class="subscribe__col">Subscriber to our newsletter</div>
-					<form class="subscribe__col">
+					<div class="subscribe__col l">Subscriber to our newsletter</div>
+					<form class="subscribe__col r">
 						<input type="text" name="email" id="email" placeholder="Email Address">
 						<button class="subscribe__btn">Subscribe</button>
 					</form>
