Organized scroll event

--- a/Project/index.html
+++ b/Project/index.html
@@ -78,7 +78,7 @@
 					<div class="line__item">Branding</div>
 				</div>
 			</div>
-			<div class="portfolio">
+			<div class="portfolio hidden">
 				<div class="container">
 					<div class="portfolio__heading">
 						<div class="portfolio__heading-name">
@@ -110,7 +110,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="portfolio-next">
+			<div class="portfolio-next hidden">
 				<div class="container">
 					<div class="portfolio-next__block">
 						<div class="portfolio-next__title">7+</div>
@@ -130,10 +130,10 @@
 			<div class="block">
 				<div class="container">
 					<div class="block__star"><img src="img/vect/star-red40&240.svg" alt="star"></div>
-					<div class="block__title">Awards</div>
-					<div class="block__subtitle">REGONITIONS & ACCOIMPLISHMENTS</div>
+					<div class="block__title hidden">Awards</div>
+					<div class="block__subtitle hidden">REGONITIONS & ACCOIMPLISHMENTS</div>
 					<div class="block__body awards">
-						<div class="awards__item">
+						<div class="awards__item hidden">
 							<div class="awards__item-block">
 								<div class="awards__item-number">1</div>
 								<div class="awards__item-heading">
@@ -146,7 +146,7 @@
 								<div class="awards__item-date">2022</div>
 							</div>
 						</div>
-						<div class="awards__item">
+						<div class="awards__item hidden">
 							<div class="awards__item-block">
 								<div class="awards__item-number">2</div>
 								<div class="awards__item-heading">
@@ -159,7 +159,7 @@
 								<div class="awards__item-date">2021</div>
 							</div>
 						</div>
-						<div class="awards__item">
+						<div class="awards__item hidden">
 							<div class="awards__item-block">
 								<div class="awards__item-number">3</div>
 								<div class="awards__item-heading">
@@ -172,7 +172,7 @@
 								<div class="awards__item-date">2018</div>
 							</div>
 						</div>
-						<div class="awards__item">
+						<div class="awards__item hidden">
 							<div class="awards__item-block">
 								<div class="awards__item-number">4</div>
 								<div class="awards__item-heading">
@@ -195,7 +195,7 @@
 					<div class="block__title">Portfolio</div>
 					<div class="block__subtitle">REGONITIONS & ACCOIMPLISHMENTS</div>
 					<div class="block__body portfolio">
-						<div class="portfolio__row img-left">
+						<div class="portfolio__row img-left hidden">
 							<div class="portfolio__col img">
 								<img src="img/rast/portfolio/1.png" alt="1">
 							</div>
@@ -205,7 +205,7 @@
 								<div class="portfolio__more">Read More</div>
 							</div>
 						</div>
-						<div class="portfolio__row img-right">
+						<div class="portfolio__row img-right hidden">
 							<div class="portfolio__col img">
 								<img src="img/rast/portfolio/2.png" alt="2">
 							</div>
@@ -215,7 +215,7 @@
 								<div class="portfolio__more">Read More</div>
 							</div>
 						</div>
-						<div class="portfolio__row img-left">
+						<div class="portfolio__row img-left hidden">
 							<div class="portfolio__col img">
 								<img src="img/rast/portfolio/3.png" alt="3">
 							</div>
@@ -225,7 +225,7 @@
 								<div class="portfolio__more">Read More</div>
 							</div>
 						</div>
-						<div class="portfolio__row img-right">
+						<div class="portfolio__row img-right hidden">
 							<div class="portfolio__col img">
 								<img src="img/rast/portfolio/4.png" alt="4">
 							</div>
@@ -242,25 +242,25 @@
 			<div class="block">
 				<div class="container">
 					<div class="block__star"><img src="img/vect/star-red40&240.svg" alt="star"></div>
-					<div class="block__title">Services</div>
-					<div class="block__subtitle">REGONITIONS & ACCOIMPLISHMENTS</div>
+					<div class="block__title hidden">Services</div>
+					<div class="block__subtitle hidden">REGONITIONS & ACCOIMPLISHMENTS</div>
 					<div class="block__body services">
-						<div class="services__item">
+						<div class="services__item hidden">
 							<div class="services__title">Web Design</div>
 							<div class="services__body">Every single project is a challenge that we accept eagerly. Let’s
 								implement innovative ideas together!</div>
 						</div>
-						<div class="services__item">
+						<div class="services__item hidden">
 							<div class="services__title">Product Design</div>
 							<div class="services__body">Every single project is a challenge that we accept eagerly. Let’s
 								implement innovative ideas together!</div>
 						</div>
-						<div class="services__item">
+						<div class="services__item hidden">
 							<div class="services__title">UI/UX Design</div>
 							<div class="services__body">Every single project is a challenge that we accept eagerly. Let’s
 								implement innovative ideas together!</div>
 						</div>
-						<div class="services__item">
+						<div class="services__item hidden">
 							<div class="services__title">Art Direction</div>
 							<div class="services__body">Every single project is a challenge that we accept eagerly. Let’s
 								implement innovative ideas together!</div>
@@ -272,17 +272,21 @@
 			<div class="block">
 				<div class="container">
 					<div class="block__star"><img src="img/vect/star-red40&240.svg" alt="star"></div>
-					<div class="block__title">Happy Customer</div>
+					<div class="block__title hidden">Happy Customer</div>
 					<div class="block__body customers">
-						<div class="customers__item"><img src="img/rast/customers/tribal.png" alt="tribal"></div>
-						<div class="customers__item"><img src="img/rast/customers/republica.png" alt="rpublica"></div>
-						<div class="customers__item"><img src="img/rast/customers/veroxfloor.png" alt="veroxfloor"></div>
-						<div class="customers__item"><img src="img/rast/customers/invoice2go.png" alt="invoice2go"></div>
+						<div class="customers__item hidden"><img src="img/rast/customers/tribal.png" alt="tribal"></div>
+						<div class="customers__item hidden"><img src="img/rast/customers/republica.png" alt="rpublica"></div>
+						<div class="customers__item hidden"><img src="img/rast/customers/veroxfloor.png" alt="veroxfloor">
+						</div>
+						<div class="customers__item hidden"><img src="img/rast/customers/invoice2go.png" alt="invoice2go">
+						</div>
 
-						<div class="customers__item"><img src="img/rast/customers/veroxfloor.png" alt="veroxfloor"></div>
-						<div class="customers__item"><img src="img/rast/customers/tribal.png" alt="tribal"></div>
-						<div class="customers__item"><img src="img/rast/customers/invoice2go.png" alt="invoice2go"></div>
-						<div class="customers__item"><img src="img/rast/customers/republica.png" alt="rpublica"></div>
+						<div class="customers__item hidden"><img src="img/rast/customers/veroxfloor.png" alt="veroxfloor">
+						</div>
+						<div class="customers__item hidden"><img src="img/rast/customers/tribal.png" alt="tribal"></div>
+						<div class="customers__item hidden"><img src="img/rast/customers/invoice2go.png" alt="invoice2go">
+						</div>
+						<div class="customers__item hidden"><img src="img/rast/customers/republica.png" alt="rpublica"></div>
 					</div>
 				</div>
 			</div>
@@ -290,10 +294,10 @@
 			<div class="block">
 				<div class="container">
 					<div class="block__star"><img src="img/vect/star-red40&240.svg" alt="star"></div>
-					<div class="block__title">Articles</div>
-					<div class="block__subtitle">REGONITIONS & ACCOIMPLISHMENTS</div>
+					<div class="block__title hidden">Articles</div>
+					<div class="block__subtitle hidden">REGONITIONS & ACCOIMPLISHMENTS</div>
 					<div class="block__body articles">
-						<div class="articles__row">
+						<div class="articles__row hidden">
 							<div class="articles__col left">
 								<div class="articles__design-date">
 									<div class="articles__item">DESIGN</div>
@@ -307,7 +311,7 @@
 								labore et dolore.
 							</div>
 						</div>
-						<div class="articles__row">
+						<div class="articles__row hidden">
 							<div class="articles__col">
 								<div class="articles__design-date">
 									<div class="articles__item">DESIGN</div>
@@ -321,7 +325,7 @@
 								labore et dolore.
 							</div>
 						</div>
-						<div class="articles__row">
+						<div class="articles__row hidden">
 							<div class="articles__col">
 								<div class="articles__design-date">
 									<div class="articles__item">BUSINESS & OFFICE</div>
@@ -335,7 +339,7 @@
 								labore et dolore.
 							</div>
 						</div>
-						<button class="articles__button">
+						<button class="articles__button hidden">
 							Browse Articles
 						</button>
 					</div>
