--- a/Project/index.html
+++ b/Project/index.html
@@ -78,7 +78,7 @@
 					<div class="line__item">Branding</div>
 				</div>
 			</div>
-			<div class="portfolio hidden">
+			<div class="portfolio">
 				<div class="container">
 					<div class="portfolio__heading">
 						<div class="portfolio__heading-name">
@@ -86,14 +86,16 @@
 							<div class="portfolio__heading-text"><img src="img/vect/star-little32.svg" alt="star"></div>
 							<div class="portfolio__heading-text">BARTHHOLD</div>
 						</div>
-						<div class="portfolio__heading-title">Lead product designer and art director.</div>
+						<div class="portfolio__heading-title hidden">Lead product designer and art director.</div>
 					</div>
 					<div class="portfolio__body">
-						<div class="portfolio__body-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+						<div class="portfolio__body-title hidden">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+							do
 							eiusmod tempor incididunt ut labore et dolore</div>
-						<div class="portfolio__body-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+						<div class="portfolio__body-subtitle hidden">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+							sed do
 							eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-						<div class="portfolio__body-info">
+						<div class="portfolio__body-info hidden">
 							<div class="portfolio__body-item">
 								<div class="portfolio__body-item-title">BORN IN</div>
 								<div class="portfolio__body-item-body">New York</div>
