Scroll event for porfolio-next

--- a/Project/index.html
+++ b/Project/index.html
@@ -112,17 +112,17 @@
 					</div>
 				</div>
 			</div>
-			<div class="portfolio-next hidden">
+			<div class="portfolio-next">
 				<div class="container">
-					<div class="portfolio-next__block">
+					<div class="portfolio-next__block hidden">
 						<div class="portfolio-next__title">7+</div>
 						<div class="portfolio-next__subtitle">Years of Experience</div>
 					</div>
-					<div class="portfolio-next__block black">
+					<div class="portfolio-next__block black hidden">
 						<div class="portfolio-next__title">50+</div>
 						<div class="portfolio-next__subtitle">Project Completed</div>
 					</div>
-					<div class="portfolio-next__block">
+					<div class="portfolio-next__block hidden">
 						<div class="portfolio-next__title">30+</div>
 						<div class="portfolio-next__subtitle">Happy Clients</div>
 					</div>
