sc event for potfolio

--- a/Project/index.html
+++ b/Project/index.html
@@ -197,44 +197,44 @@
 					<div class="block__title">Portfolio</div>
 					<div class="block__subtitle">REGONITIONS & ACCOIMPLISHMENTS</div>
 					<div class="block__body portfolio">
-						<div class="portfolio__row img-left hidden">
-							<div class="portfolio__col img">
+						<div class="portfolio__row img-left">
+							<div class="portfolio__col img hidden">
 								<img src="img/rast/portfolio/1.png" alt="1">
 							</div>
-							<div class="portfolio__col">
+							<div class="portfolio__col hidden">
 								<div class="portfolio__class">Art Direction</div>
 								<div class="portfolio__title">Beautiful and advanced website interfaces</div>
 								<div class="portfolio__more">Read More</div>
 							</div>
 						</div>
-						<div class="portfolio__row img-right hidden">
-							<div class="portfolio__col img">
+						<div class="portfolio__row img-right">
+							<div class="portfolio__col img hidden">
 								<img src="img/rast/portfolio/2.png" alt="2">
 							</div>
-							<div class="portfolio__col">
+							<div class="portfolio__col hidden">
 								<div class="portfolio__class">Branding</div>
 								<div class="portfolio__title">Design and extreme programming practice</div>
 								<div class="portfolio__more">Read More</div>
 							</div>
 						</div>
-						<div class="portfolio__row img-left hidden">
-							<div class="portfolio__col img">
+						<div class="portfolio__row img-left">
+							<div class="portfolio__col img hidden">
 								<img src="img/rast/portfolio/3.png" alt="3">
 							</div>
-							<div class="portfolio__col">
+							<div class="portfolio__col hidden">
 								<div class="portfolio__class">Web Design</div>
 								<div class="portfolio__title">Nature inspired design</div>
 								<div class="portfolio__more">Read More</div>
 							</div>
 						</div>
-						<div class="portfolio__row img-right hidden">
-							<div class="portfolio__col img">
+						<div class="portfolio__row img-right">
+							<div class="portfolio__col img hidden">
 								<img src="img/rast/portfolio/4.png" alt="4">
 							</div>
 							<div class="portfolio__col">
 								<div class="portfolio__class">Motion Graphics</div>
 								<div class="portfolio__title">Design & concept at work.</div>
-								<div class="portfolio__more">Read More</div>
+								<div class="portfolio__more hidden">Read More</div>
 							</div>
 						</div>
 					</div>
